[gd_scene load_steps=15 format=2]

[ext_resource path="res://MyFirstLightingEngine.gd" type="Script" id=1]
[ext_resource path="res://assets/1px.png" type="Texture" id=2]
[ext_resource path="res://assets/circle.png" type="Texture" id=3]
[ext_resource path="res://shaders/Final.shader" type="Shader" id=4]
[ext_resource path="res://shaders/GI.shader" type="Shader" id=5]
[ext_resource path="res://shaders/VoronoiSeed.shader" type="Shader" id=6]
[ext_resource path="res://shaders/JumpFloodPass.shader" type="Shader" id=7]
[ext_resource path="res://shaders/DistanceField.shader" type="Shader" id=8]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("GI")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/u_GI_texture = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/u_offset = 1.0
shader_param/u_level = 0.0
shader_param/u_max_steps = 0.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 8 )
shader_param/u_dist_mod = 100.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/PI = 3.1416
shader_param/u_rays_per_pixel = 32.0
shader_param/u_emission_multi = 1.0
shader_param/u_max_raymarch_steps = 32
shader_param/u_dist_mod = 1.0

[node name="MyFirstLightingEngine" type="Node2D"]
script = ExtResource( 1 )

[node name="EmittersAndOccluders" type="Viewport" parent="."]
transparent_bg = true
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="Scene" type="Node2D" parent="."]

[node name="EmitterCyan" type="Sprite" parent="Scene"]
modulate = Color( 0, 0.952941, 1, 1 )
position = Vector2( 58.93, 117.14 )
texture = ExtResource( 3 )

[node name="EmitterMagenta" type="Sprite" parent="Scene"]
modulate = Color( 1, 0, 0.772549, 1 )
position = Vector2( 318.657, 146.788 )
texture = ExtResource( 3 )

[node name="EmitterOrange" type="Sprite" parent="Scene"]
modulate = Color( 1, 0.560784, 0, 1 )
position = Vector2( 229.567, 31.741 )
texture = ExtResource( 3 )

[node name="Occluder1" type="Sprite" parent="Scene"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 182.639, 141.063 )
scale = Vector2( 170.706, 5.24263 )
texture = ExtResource( 2 )

[node name="Occluder2" type="Sprite" parent="Scene"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 198.903, 100.404 )
texture = ExtResource( 3 )

[node name="Occluder3" type="Sprite" parent="Scene"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 86.1192, 61.8668 )
rotation = -0.799009
scale = Vector2( 12.3137, 115.551 )
texture = ExtResource( 2 )

[node name="Screen" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoronoiSeed" type="Viewport" parent="."]
render_target_v_flip = true
render_target_update_mode = 3

[node name="Tex" type="TextureRect" parent="VoronoiSeed"]
material = SubResource( 3 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true

[node name="JumpFloodPass" type="Viewport" parent="."]

[node name="Tex" type="TextureRect" parent="JumpFloodPass"]
material = SubResource( 4 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true

[node name="DistanceField" type="Viewport" parent="."]
render_target_clear_mode = 1

[node name="Tex" type="TextureRect" parent="DistanceField"]
material = SubResource( 5 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true

[node name="GI" type="Viewport" parent="."]

[node name="Tex" type="TextureRect" parent="GI"]
material = SubResource( 6 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true
